--- a/style.css
+++ b/style.css
@@ -187,6 +187,9 @@ header h1 {
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 0;
+    margin: 0;
+    width: 100%;
 }
 
 .manga-page {
