--- a/style.css
+++ b/style.css
@@ -195,6 +195,7 @@ header h1 {
 .manga-page {
     width: 100vw; /* ширина по всей ширине окна */
     max-width: 100%;
+    margin-left: -20px;
     height: auto;
     display: block;
     margin: 0;
